<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <RadioGroup
        android:layout_width="324dp"
        android:layout_height="163dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392">

        <RadioButton
            android:id="@+id/rd650"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbLunetaAzul"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rd450"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbLunetaNaranja"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rd550"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbLunetaVerde"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb750"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbLunetaRojo"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb350"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbLunetaVioleta"
            android:textSize="18sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/xmlng"
        android:layout_width="215dp"
        android:layout_height="54dp"
        android:text="@string/seccionLuneta"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />

    <EditText
        android:id="@+id/XMLpERS"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.769" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:text="@string/jlPersonas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664" />

    <Button
        android:id="@+id/XMLCalcula1"
        android:layout_width="176dp"
        android:layout_height="66dp"
        android:onClick="btnEntrar"
        android:text="@string/jbCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.629"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951" />

</androidx.constraintlayout.widget.ConstraintLayout>