<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:text="@string/jlPersonas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.595" />

    <Button
        android:id="@+id/XMLCalcula1"
        android:layout_width="217dp"
        android:layout_height="51dp"
        android:onClick="btnEntrar"
        android:text="@string/jbCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.873" />

    <EditText
        android:id="@+id/XMLpERS"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.699" />

    <RadioGroup
        android:layout_width="319dp"
        android:layout_height="120dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392">

        <RadioButton
            android:id="@+id/rd280"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPalcos1"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rd250"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPalcos2"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb150"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbPalcos3"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/xmlng"
        android:layout_width="215dp"
        android:layout_height="54dp"

        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        tools:text="@string/seccionBalconTres" />
</androidx.constraintlayout.widget.ConstraintLayout>