<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/XMLCantidad"
        android:layout_width="114dp"
        android:layout_height="44dp"
        android:ems="10"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706" />

    <Button
        android:id="@+id/XMLCalcula1"
        android:layout_width="217dp"
        android:layout_height="51dp"
        android:onClick="btnEntrar"
        android:text="@string/jbCalcular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.237"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.88" />

    <TextView
        android:id="@+id/XMLpERS"
        android:layout_width="102dp"
        android:layout_height="34dp"
        android:text="@string/jlPersonas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.602" />

    <RadioGroup
        android:layout_width="337dp"
        android:layout_height="131dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.392">

        <RadioButton
            android:id="@+id/rd280"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbBalcoNNaranja"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb300"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbBalcoNVerde"
            android:textSize="18sp" />

        <RadioButton
            android:id="@+id/rb250"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rbBalcoNVioleta"
            android:textSize="18sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/xmlng"
        android:layout_width="225dp"
        android:layout_height="67dp"
        android:text="@string/seccionBalconDos"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.193"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096" />
</androidx.constraintlayout.widget.ConstraintLayout>